# soups

./: .coderabbit.yaml  .editorconfig  .flake8  .gitattributes  .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_test_multiple_checkpoints.py  run_test_with_model_soups.py  run_test_with_soft_voting.py  test_multiple_checkpoints.py  test_with_model_soups.py  train.py  visualize_predictions.py  visualize_with_mds.py
.github/workflows/: check_environment.yml  check_imports.py  check_imports.yml  lint.yml
scripts/: filter_high_self_influence_score_samples.py  soups.sh  split_ICH_dataset.py  split_dataset.py  test.sh  train.sh
soups/: constants.py  custom_dataset.py  opts.py  run_test_multiple_checkpoints.py  run_test_with_model_soups.py  run_test_with_soft_voting.py  self_influence.py  test_multiple_checkpoints.py  test_with_model_soups.py  train.py  train_with_co_teaching.py  train_with_text.py  visualize_predictions.py  visualize_with_mds.py
soups/models/: __init__.py  model.py
soups/utils/: __init__.py  balanced_mixup.py  bypass_bn.py  dist.py  general.py  logger.py  metric.py  training.py
